can add medications.

--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
@@ -214,3 +214,5 @@ vaccination.default.episode.description=vaccination given
 
 vaccination.default.narrative=vaccine was given.
 default.episode.description=a clinical episode
+
+medications.not.listed=no medications listed
