maintenance, try to allow street/suburb/postcode as well as urb/postcode.

--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
@@ -71,8 +71,8 @@ demo.title=title
 demo.streetno=no
 
 demo.street=street
-
-demo.urb=suburb
+demo.suburb =suburb(non-AU)
+demo.urb=suburb(AU)/urb(non-AU)/city
 
 demo.postcode=postcode
 
