upto date with what schema is on salaam.

--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_de.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_de.properties
@@ -216,3 +216,5 @@ vaccination.default.narrative=vaccine was given.
 default.episode.description=a clinical episode
 
 medications.not.listed=no medications listed
+
+new.health.issue=new health issue
