--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
@@ -215,4 +215,6 @@ vaccination.default.episode.description=vaccination given
 vaccination.default.narrative=vaccine was given.
 default.episode.description=a clinical episode
 
-medications.not.listed=no medications listed
+medications.not.listed=no medications not listed
+
+new.health.issue=new health issue
