health issue date bug;

--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_en.properties
@@ -218,3 +218,5 @@ default.episode.description=a clinical episode
 medications.not.listed=no medications not listed
 
 new.health.issue=new health issue
+
+issue.or.episode.description=new issue / this episode description (*)
