--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_de.properties
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/java/resources/application_de.properties
@@ -215,6 +215,8 @@ vaccination.default.episode.description=vaccination given
 vaccination.default.narrative=vaccine was given.
 default.episode.description=a clinical episode
 
-medications.not.listed=no medications listed
+medications.not.listed=no medications not listed
 
 new.health.issue=new health issue
+
+issue.or.episode.description=new issue / this episode description (*)
